<resources>
    <string name="app_name">KidsZone</string>
    <string name="msg_perder">Perdeu</string>
    <string name="msg_ganhou">Ganhou</string>
    <string name="login">Login</string>
    <string name="jogar">Jogar</string>
    <string name="dicas">Dicas</string>
    <string name="descImagemLogo">Logotipo KidsZone</string>
    <string name="username">Nome Usuário</string>
    <string name="password">Password</string>
    <string name="password_conf">Confirmar Password</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnEntrarFacebook">Entrar com o Facebook</string>
    <string name="jogoTreino">Jogo Treino</string>
    <string name="jogoComp">Jogo Competitivo</string>
    <string name="perguntaRegisto">Ainda não tens a tua conta?</string>
    <string name="btnRegistar">Registaste aqui!</string>
</resources>
